# appAnnouncement

./: .gitignore  111.html  222.html  README.md  index.html  main.html  package-lock.json  package.json  screen.md  styles.css  产品说明文档.md
js/: app.js  config.js  download.js  model3d.js  projects.js  upload.js
react-app-announcement/: README.md  advanced_icon_generator.py  index.html  package-lock.json  package.json  rename_stickers.py  tailwind.config.js
react-app-announcement/docs/issues/: ARCHITECTURE_REFACTOR.md  README.md
react-app-announcement/src/: App-test.jsx  App.jsx  main.jsx  styles.css
react-app-announcement/src-tauri/: Cargo.toml  Readme.md  tauri.conf.json
react-app-announcement/src-tauri/icons/: icon.icns
react-app-announcement/src-tauri/src/: main.rs
react-app-announcement/src/components/: 3d图片灰.md  BackgroundDecorations.jsx  ConfirmDialog.jsx  ContextMenu.jsx  CreateProjectModal.jsx  DraggableWrapper.jsx  DynamicComponent.jsx  EditManager.jsx  EditableWrapper.jsx  EditorToolbar.jsx  ExportFrame.jsx  HomePage.jsx  LeftConfigPanel.jsx  MacBookModel2D.jsx  MainContent.jsx  MultiSelectionBox.jsx  NewMainInterface.jsx  PhoneModel copy 2.jsx  PhoneModel copy.jsx  PhoneModel.jsx  PhoneModel2D.jsx  PhoneModelMesh.jsx  ProjectsPanel.jsx  SaveDialog.jsx  SelectionBox.jsx  StyleProvider.jsx  TemplateCodePanel.jsx  TopToolbar.jsx  all.md
react-app-announcement/src/config/: layoutConfigs.js
react-app-announcement/src/context/: AppContext.jsx
src/: App.tsx
src/components/: canvas.tsx  model.tsx  scene.tsx
(+67 files in other folders)
