[package]
name = "react-app-announcement"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [ "fs-remove-file", "shell-open", "fs-copy-file", "fs-read-dir", "fs-read-file", "dialog-save", "dialog-open", "fs-remove-dir", "dialog-message", "dialog-ask", "fs-exists", "fs-rename-file", "dialog-confirm", "fs-create-dir", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
